--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,8 +32,10 @@
   color: var(--secondaryColor);
   font-weight: 700;
   text-decoration: none;
+  margin-left: 30px;
+  border-bottom: 3px solid transparent;
 }
 
 .active {
-  border-bottom: 3px solid var(--secondaryBorderColor);
+  border-color: var(--secondaryBorderColor);
 }
